# ainews-open

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  MAINTAINERS.md  Makefile  README.md  README.zh-CN.md  ROADMAP.md  ROADMAP.zh-CN.md  SECURITY.md  SUPPORT.md  compose.yaml  pyproject.toml
.github/: CODEOWNERS  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  daily-digest.yml  demo-pages.yml  housekeeping.yml  pypi-publish.yml  release-artifact-smoke.yml  release.yml  smoke.yml
deploy/grafana/: ainews-dashboard.json
deploy/prometheus/: prometheus.yml  rules.yml
docs/: architecture.md  community-triage.md  community-triage.zh-CN.md  compatibility.md  configuration.md  configuration.zh-CN.md  contributor-playbook.md  database-migrations.md  deployment.md  deployment.zh-CN.md  first-deploy.md  first-deploy.zh-CN.md  github-launch-kit.md  maintainer-bootstrap.md  maintainer-bootstrap.zh-CN.md  monitoring.md  monitoring.zh-CN.md  pinned-repo-copy.md  pr-review-policy.md  pr-review-policy.zh-CN.md  project-intro.md  release-artifacts.md  release-artifacts.zh-CN.md  release-checklist.md  release-checklist.zh-CN.md  release-recovery.md  release-recovery.zh-CN.md  support-lifecycle.md  support-lifecycle.zh-CN.md  troubleshooting.md  troubleshooting.zh-CN.md  use-cases.md  use-cases.zh-CN.md
docs/assets/: social-preview.html
docs/demo/: index.html  sample-digest.en.md  sample-digest.json  sample-digest.md  sample-health.json  sample-operations.json  sample-publications.json
docs/releases/: README.md  README.zh-CN.md  v0.6.0.md  v1.0.0-announcement.md  v1.0.0.md  v1.1.0.md  v1.1.1.md  v1.1.2.md  v1.2.0.md  v1.2.1.md  v1.2.10.md  v1.2.11.md  v1.2.12.md  v1.2.13.md  v1.2.14.md  v1.2.15.md  v1.2.16.md  v1.2.17.md  v1.2.18.md  v1.2.19.md  v1.2.2.md  v1.2.20.md  v1.2.21.md  v1.2.22.md  v1.2.23.md  v1.2.24.md  v1.2.25.md  v1.2.26.md  v1.2.27.md  v1.2.28.md  v1.2.29.md  v1.2.3.md  v1.2.30.md  v1.2.31.md  v1.2.32.md  v1.2.33.md  v1.2.34.md  v1.2.35.md  v1.2.36.md  v1.2.37.md  (+23 more)
src/ainews/: __init__.py  alerting.py  api.py  cli.py  config.py  content_extractor.py  feed_parser.py  google_news.py  http.py  llm.py  logging_utils.py  metrics.py  models.py  publisher.py  repository.py  service.py  source_registry.py  sources.default.json  telemetry.py  utils.py
src/ainews/web/: app.js  index.html  styles.css
tests/: test_alerting.py  test_api.py  test_cli.py  test_config.py  test_content_extractor.py  test_docs_links.py  test_feed_parser.py  test_google_news.py  test_http.py  test_integration_http.py  test_logging_utils.py  test_pipeline_e2e.py  test_publisher.py  test_release_metadata.py  test_repository.py  test_service.py  test_source_registry.py  test_telemetry.py  test_utils.py
tests/fixtures/extraction/: 36kr.html  a16z-event-takeaways.html  anthropic-approval-continuity-faq.html  anthropic-approval-escalation-note.html  anthropic-approval-handoff-faq.html  anthropic-concurrency-cap-update.html  anthropic-continuity-exception-checklist.html  anthropic-continuity-handoff-checklist.html  anthropic-continuity-revalidation-checklist.html  anthropic-continuity-revalidation-exception-matrix.html  anthropic-continuity-revalidation-faq.html  anthropic-continuity-revalidation-matrix.html  anthropic-continuity-revalidation-waiver-checklist.html  anthropic-continuity-revalidation-waiver-faq.html  anthropic-continuity-waiver-faq.html  anthropic-escalation-rollback-checklist.html  anthropic-fairness-policy-update.html  anthropic-grace-period-notice.html  anthropic-priority-escalation-guide.html  (+131 more)
(+14 files in other folders)
