[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ainews-open"
version = "0.6.0"
description = "Open-source-ready daily AI news aggregation service for domestic and international AI coverage."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Open Source Contributors" }
]
dependencies = [
  "beautifulsoup4>=4.12.0,<5.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn>=0.32.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2,<2.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pre-commit>=4.2.0,<5.0.0",
  "pytest>=8.3.0,<9.0.0",
  "ruff>=0.11.0,<1.0.0",
]

[project.scripts]
ainews = "ainews.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ainews = ["sources.default.json", "web/*.html", "web/*.css", "web/*.js"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["ainews"]
